Grouping and organizing your cluster/annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  annotations:
    description: "This pod runs the Nginx server"
spec:
  containers:
  - name: my-container
    image: nginx
